fix callout feedback gap & add variables

--- a/packages/scss/src/components/calloutFeedbackList/mods.scss
+++ b/packages/scss/src/components/calloutFeedbackList/mods.scss
@@ -1,8 +1,9 @@
 @use '@lucca-front/scss/src/components/button/exports' as button;
 
 @mixin S {
-	font-size: var(--sizes-S-fontSize);
-	line-height: var(--sizes-S-lineHeight);
+	--components-calloutFeedbackList-gap: var(--pr-t-spacings-100);
+	--components-calloutFeedbackList-fontSize: var(--sizes-S-fontSize);
+	--components-calloutFeedbackList-lineHeight: var(--sizes-S-lineHeight); 
 
 	.button {
 		@include button.XS;
